Archive2/0a/39674822370290/output
main.cpp: In function 'int main()':
main.cpp:11:23: error: expected unqualified-id before '=' token
      SQLQueryCallback = &foo ; // error: expected unqualified-id before '=' token. Works only when SQLQueryCallback is function pointer.
                       ^
